[tool.poetry]
name = "telegram-shields"
version = "0.1.0"
description = "Custom Telegram membercount endpoint for shields.io"
authors = ["pcroland <pcroland@protonmail.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.5"
quart = "^0.18.4"
python-telegram-bot = "^20.2"
toml = "^0.10.2"
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
